# DIP-HW04

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: BaseProcessor.cpp  BaseProcessor.h  Smoother.cpp  Smoother.h  common.cpp  common.h  main.cpp
src/filters/: BaseFilter.cpp  BaseFilter.h  GaussianFilter.cpp  GaussianFilter.h  MeanFilter.cpp  MeanFilter.h  MedianFilter.cpp  MedianFilter.h
src/helpers/: MedianFinder.cpp  MedianFinder.h
src/helpers/ds/: Heap.cpp  Heap.h
